[gd_scene load_steps=6 format=2]

[ext_resource path="res://Theme.tres" type="Theme" id=1]
[ext_resource path="res://Assets/sprites/Grandpa_1.png" type="Texture" id=2]
[ext_resource path="res://Doubleplus.otf" type="DynamicFontData" id=3]
[ext_resource path="res://StoryScreen.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 60
font_data = ExtResource( 3 )

[node name="StoryScreen" type="Panel"]
margin_right = 1920.0
margin_bottom = 1076.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 120
custom_constants/margin_top = 80
custom_constants/margin_left = 120
custom_constants/margin_bottom = 80
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_left = 120.0
margin_top = 80.0
margin_right = 1800.0
margin_bottom = 996.0
custom_constants/separation = 37
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="MarginContainer/HBoxContainer"]
margin_right = 1343.0
margin_bottom = 916.0
size_flags_horizontal = 3
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "This is a test story about that time where I went to the hospital lkalkjf akldf jalködf aölksf lköasdjf lköajdsfkl jdasdölkj alöksf klasjd lköjaslkf jalködjf lköasdjf lköadjf löjasdfl jasdlfj lkaödjflkö asjflkdajf kladfj aklfj alkösdf lköajsdflkö adsfkl jasdlkfj lkaödfj alksdjflköjfkls djflka jlkfdj lköasdjfklö adsjf ashfkjahsd jkflhadsfjk hajkdfhasjdgajlkjasdlkdsjgf löajfa kljadslök jasdflk jalköj agklajsdkl fjalkösf adkslöjasdlk fjdasfkljadsfölk sjafsdj kldaö fjads ölkdfj aklöfja aölkfj asölkdf jadsflj dakösfj öakldfj asdökf jdasfj dalöfkj asdlfj adsfklöaj dasölfjdaö ljfö lakjf ölkajfa köjadfk ljad flkadj lköadfaödklsfj adslöf jadsföl adjasdölkdj aflkdjf ölkadsjf dasölfj dölfk ajdlköf jölkfd jaölkdsf jadsölkfj asdöfj alköfj adlkfj aöslkf adkslöjfadslkjfaölk alkdfs j lkadsjj lkajdflk jlaafdlö adkljf"
text = "This is a test story about that time where I went to the hospital lkalkjf akldf jalködf aölksf lköasdjf lköajdsfkl jdasdölkj alöksf klasjd lköjaslkf jalködjf lköasdjf lköadjf löjasdfl jasdlfj lkaödjflkö asjflkdajf kladfj aklfj alkösdf lköajsdflkö adsfkl jasdlkfj lkaödfj alksdjflköjfkls djflka jlkfdj lköasdjfklö adsjf ashfkjahsd jkflhadsfjk hajkdfhasjdgajlkjasdlkdsjgf löajfa kljadslök jasdflk jalköj agklajsdkl fjalkösf adkslöjasdlk fjdasfkljadsfölk sjafsdj kldaö fjads ölkdfj aklöfja aölkfj asölkdf jadsflj dakösfj öakldfj asdökf jdasfj dalöfkj asdlfj adsfklöaj dasölfjdaö ljfö lakjf ölkajfa köjadfk ljad flkadj lköadfaödklsfj adslöf jadsföl adjasdölkdj aflkdjf ölkadsjf dasölfj dölfk ajdlköf jölkfd jaölkdsf jadsölkfj asdöfj alköfj adlkfj aöslkf adkslöjfadslkjfaölk alkdfs j lkadsjj lkajdflk jlaafdlö adkljf"
scroll_following = true

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
margin_left = 1380.0
margin_right = 1680.0
margin_bottom = 916.0

[node name="Portrait" type="TextureRect" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_right = 300.0
margin_bottom = 400.0
rect_min_size = Vector2( 300, 400 )
texture = ExtResource( 2 )
expand = true

[node name="MenuOptions" type="VBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 404.0
margin_right = 300.0
margin_bottom = 916.0
size_flags_vertical = 3
custom_constants/separation = 30
alignment = 1

[node name="OptionA" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer/MenuOptions"]
margin_top = 181.0
margin_right = 300.0
margin_bottom = 241.0
theme = ExtResource( 1 )
text = "Choice A"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionB" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer/MenuOptions"]
margin_top = 271.0
margin_right = 300.0
margin_bottom = 331.0
theme = ExtResource( 1 )
text = "Choice B"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/MenuOptions/OptionA" to="." method="_on_OptionA_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/MenuOptions/OptionB" to="." method="_on_OptionB_pressed"]
